Fixed bug where the main items of item 2 where not wraping to new line

--- a/Project: Responsive Website/index.css
+++ b/Project: Responsive Website/index.css
@@ -44,11 +44,6 @@ a {
 
 
 
-.item-2-ul {
-    display: flex;
-    flex-wrap: wrap;
-
-}
 
 
 .nav-img {
@@ -86,37 +81,21 @@ a {
     margin-left: auto;
     margin-right: auto;
     flex-wrap: wrap;
-
-
 }
-
-.end {
-    justify-self: flex-start;
-    align-self: flex-end;
-}
-
-.container-body {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-content: center;
-    align-items: center;
-}
-
 
 
 body {
     background-color: black;
 }
 
-
-
 .item-2 {
     display: flex;
-    position: sticky;
     align-items: center;
+    align-self: center;
+    text-align: center;
     justify-content: center;
-    margin-left: auto;
+    list-style: none;
+    flex-basis: 100%;
 }
 
 @media screen and (max-width:1024px) {
@@ -126,11 +105,13 @@ body {
 }
 
 .item-2 img {
-    width: 1024;
+    max-width: 600px;
+    max-height: 600px;
 }
 
 .item-imgs {
-    width: 1024px;
+
+    width: 800px;
     height: 800px;
 }
 
@@ -147,4 +128,20 @@ body {
 .UserPhotos {
     min-width: 600px;
     min-height: 600px;
+}
+
+.testingMain {
+    display: flex;
+    flex-basis: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: wrap;
+}
+
+.testing {
+    display: flex;
+    list-style-type: none;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
